<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#EEC28C"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        android:textSize="24sp"
        android:inputType="textMultiLine"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/name"
        android:hint="@string/email"
        android:textSize="24sp"
        android:inputType="textMultiLine"
        />
    <TextView
        android:id="@+id/txt5"
        android:text="@string/toppings"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/email"
        style="@style/headerStyle"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check"
        android:text="@string/wipped_cream"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/txt5"
        android:textSize="16sp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check1"
        android:text="@string/chocolate_cream"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/check"
        android:textSize="16sp"/>

    <TextView
        android:text="@string/quantity"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/check1"
        android:layout_marginTop="16dp"
        android:id="@+id/tex1"
        style="@style/headerStyle"/>
    <Button
        android:id="@+id/decrement"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/tex1"
        android:layout_alignLeft="@id/tex1"
        android:layout_marginTop="10dp"
        android:padding="1dp"
        android:text="-"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="decrement"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tex1"
        android:layout_toRightOf="@id/decrement"
        android:id="@+id/txt2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="0"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/increment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/tex1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/txt2"
        android:padding="1dp"
        android:text="+"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="increment"/>
    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/decrement"
        android:layout_alignStart="@id/decrement"
        android:layout_marginTop="10dp"
        android:text="Order Summary"
        android:textSize="20sp"
        android:id="@+id/txt3"/>
    -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/decrement"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/decrement"
        android:text="@string/rs_0"
        android:textSize="20sp"
        android:id="@+id/txt4"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt4"
        android:layout_alignStart="@id/decrement"
        android:layout_marginTop="10dp"
        android:text="@string/order"
        android:textStyle="bold"
        android:textSize="20dp"
        android:onClick="submitOrder"/>
</RelativeLayout>